<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="model"
            type="pl.mkwiecinski.presentation.details.vm.DetailsViewModel"
            />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Dark"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/errorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="@{model.error != null}"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/list_loading_error"
                />

            <Button
                android:id="@+id/btnRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="@{!safeUnbox(model.isLoading)}"
                android:onClick="@{() -> model.retry()}"
                android:text="@string/retry"
                />
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="130dp"
            android:visibility="@{model.isLoading}"
            />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="@{model.error == null}"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.name}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    tools:text="Title"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{model.details.url}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:visibility="@{model.details != null}"
                    tools:text="http://example.com"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/issues"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{@string/opened_issues_count(model.details.issues.openedTotalCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:visibility="@{model.details != null}"
                    tools:text="@string/opened_issues_count"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listOpenedIssues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:layout_height="100dp"
                    tools:listitem="@layout/item_issue_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@{@string/closed_issues_count(model.details.issues.closedTotalCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:visibility="@{model.details != null}"
                    tools:text="@string/closed_issues_count"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listClosedIssues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:layout_height="100dp"
                    tools:listitem="@layout/item_issue_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pull_requests"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{@string/opened_pull_requests_count(model.details.pullRequests.openedTotalCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:visibility="@{model.details != null}"
                    tools:text="@string/opened_pull_requests_count"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listOpenedPRs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:layout_height="100dp"
                    tools:listitem="@layout/item_pull_request_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@{@string/closed_pull_requests_count(model.details.pullRequests.closedTotalCount)}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:visibility="@{model.details != null}"
                    tools:text="@string/closed_pull_requests_count"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listClosedPRs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:layout_height="100dp"
                    tools:listitem="@layout/item_pull_request_info"
                    />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabOpenBrowser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_open_in_new"
            android:visibility="@{model.details.url != null}"
            />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
